--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="./js/index.js" defer></script>
         <style>
             body {
-                background: #ffffff;
+                background: #eccc68;
             }
         </style>
     </head>
