--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
         <span class="s2">我是一个内联元素span2</span>
         <span class="s3">我是一个内联元素span3</span>
         <div class="box5">我是演示css3新特性的盒子</div>
+        <button id="btn">添加div盒子</button>
+        <div id="container2">
+
+        </div>
+        <div id="container3">
+            <img id="img1" class="img-box" src="./img/img1.jpeg" alt="一幅动漫图" title="一幅动漫图" width="100" height="100">
+            <img id="img2" class="img-box" src="./img/img2.png" alt="一幅动漫图" title="一幅动漫图" width="100" height="100">
+            <img id="img3" class="img-box" src="./img/img3.jpeg" alt="一幅动漫图" title="一幅动漫图" width="100" height="100">
+            <img id="img4" class="img-box" src="./img/img4.jpeg" alt="一幅动漫图" title="一幅动漫图" width="100" height="100">
+            <img id="img5" class="img-box" src="./img/img5.jpeg" alt="一幅动漫图" title="一幅动漫图" width="100" height="100">
+            <div id="tab-btn">
+                <div id="btn-left" class="tab2 tab-left">&lt;</div>
+                <div id="btn-right" class="tab2 tab-right">&gt;</div>
+            </div>
+        </div>
+        
         <script>
             
         </script>
