--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@
                 <div id="btn-left" class="tab2 tab-left">&lt;</div>
                 <div id="btn-right" class="tab2 tab-right">&gt;</div>
             </div>
+            <div id="container4">
+                <div id="c1" class="card">32</div>
+                <div id="c2" class="card">43</div>
+                <div id="c3" class="card">43</div>
+                <div id="c4" class="card">54</div>
+                <div id="c5" class="card">54</div>
+                <button onclick="setNum()">重置数字</button>
+            </div>
         </div>
         
         <script>
