--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <span class="s3">我是一个内联元素span3</span>
         <div class="box5">我是演示css3新特性的盒子</div>
         <button id="btn">添加div盒子</button>
+        <button onclick="clearDiv()">删除一个div盒子</button>
         <div id="container2">
 
         </div>
