引入第三方库

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>我的第一个网页</title>  <!--  HTML文档的标题 -->
         <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/bootstrap.min.css">
         <script src="./js/index.js" defer></script>
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+        <script src="./js/bootstrap.min.js"></script>
+        <script src="./js/jquery-3.6.1.min.js"></script>
         <style>
             body {
                 background: #eccc68;
