--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="./css/index.css">
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <script src="./js/index.js" defer></script>
+        <script src="./js/main.js"></script>
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <script src="./js/bootstrap.min.js"></script>
         <script src="./js/jquery-3.6.1.min.js"></script>
@@ -158,6 +159,7 @@
               }
             }).mount('#app')
         </script>
+        <button onclick="console.log('bind button');">bind button</button>
         <button type="button" class="btn">基本按钮</button>
         <button type="button" class="btn btn-primary">主要按钮</button>
         <button type="button" class="btn btn-secondary">次要按钮</button>
